# PersonalTelegramTradingBot

./: .env  README.md  main.py  notes.txt  pyproject.toml  test.session  user_session.session  user_session.session-journal
